# TSMAccountingManager

./: .flake8  .gitignore  LICENSE  README.md  config_example.yml  pyproject.toml  tmp.txt  todo.md
.github/workflows/: lint.yml  test.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/importer/: importer.py
tests/: conftest.py  test_importer.py  test_main.py  test_tmp.py
tests/backend/: general_utils.py  test_data_handler.py  test_database.py  test_models.py
tests/backend/data/: Accounting_Dalaran_sales.csv  test.ipynb
tests/data/: full_data_expenses.csv  full_data_expenses_wf.csv  full_data_sales.csv  full_data_sales_wf.csv  test.ipynb  test_data_expenses.csv  test_data_sales.csv
tsmaccountingmanager/: main.py
tsmaccountingmanager/backend/: data_handler.py  database.py  models.py  request_handler.py
tsmaccountingmanager/pages/: import.py
tsmaccountingmanager/utils/: config.py  logger.py
