[tool.poetry]
name = "tsmaccountingmanager"
version = "0.1.0"
description = ""
authors = ["DavidGL17 <david.gonzalez@citycable.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
pysondb = "^1.6.7"
streamlit = "^1.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"

[tool.poetry.scripts]
main = "tsmaccountingmanager.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
