[tool.poetry]
name = "tsmaccountingmanager"
version = "0.1.0"
description = ""
authors = ["DavidGL17 <david.gonzalez@citycable.ch>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pysondb = "^1.6.7"
streamlit = "^1.15.1"
zodb = "^5.8.0"
pytz = "^2022.7.1"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"
black = "^22.10.0"
ipykernel = "^6.21.1"
poethepoet = "^0.18.1"

[tool.poe.tasks]
lint = "poetry run flake8 tsmaccountingmanager tests"
test = "poetry run pytest tests"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
